ui-100 [stable]: fixed alignment of the Selection Set window.

--- a/retrade/src/main/webapp/retrade/resources/retrade.css
+++ b/retrade/src/main/webapp/retrade/resources/retrade.css
@@ -746,7 +746,7 @@ div.retrade-desktop-event .retrade-boshadow-N-content,
 {
   text-align: center; vertical-align: middle;
   font-family: 'PT Sans', 'Arial', sans-serif;
-  font-size: 25px; color: black;
+  font-size: 25px; color: black; padding-top: 2px;
 }
 
 div.retrade-desktop-eventsnum-area
